# LocalCalibrationPubExps

./: .gitignore  README.md  debug_utils.py  fixsolver.py  multi_compare.py  plot_manager.py  prompt_shortening.py  protogrator.py  requirements.txt  solve_helpers.py  turn_continuation_fixsolver.py
calipy/: .gitrepo  LICENSE  README.md  pyproject.toml
calipy/src/calipy/: calibrate.py  experiment_results.py  plotting.py  utils.py
generalization/: gen_quick_probe.py  hello_halu.py
localizing/: __init__.py  all_correct_estimate.py  cross_fold.py  cross_se_robustness.py  direct_prompt.py  dypywhat.py  evaling.py  explore_weird.py  filter_helpers.py  fix_adders.py  fix_extra_versions.py  intrinsic.py  line_vis.py  localizing_structs.py  multi_data_gathering.py  multis_compare_agg.py  nonsynth_localization.py  pape_multis.py  predictions_repr.py  problem_processing.py  sort_vals.py  vis.py
localizing/probe/: .gitignore  data_sanity.py  embedding_styles.py  heuristic_vec_gather.py  probe_data_gather.py  probe_models_agg.py  probe_models_single.py  run_all_probe_exps.py
localizing/probe/agg_models/: __init__.py  agg_config.py  agg_data_structures.py  agg_dataloader.py
pape/: configs.py  dataset_flow_stats.py  dataset_stats_table.py  gen_tex_vars.py  main_metrics_table.py  texrendering.py
rand/: contigent.py  mem_util.py  run_single_multi_compare.py  run_temperature_sweep.py
