[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["calipy"]
package-dir = {"" = "src"}

[project]
name = "calipy"
version = "0.0.1"
authors = [
]
description = "Toolkit for measuring & visualizing calibration"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["calibration"]
dependencies = [
    "matplotlib", "numpy", "scipy", "scikit-learn", "pandas", "jinja2"
]

[project.optional-dependencies]
dev = ["ruff~=0.1.1", "pytest~=7.4.2", "pytest-cov~=4.1.0"]

[project.urls]
"Homepage" = "example.com"

[tool.ruff]
target-version = "py312"
fix-only = true
line-length = 88
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    "B",
    "Q",
    "TID",
    # "C90",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
    "ERA",
]

ignore = [
    # missing-type-function-argument (ANN001)
    "ANN001",

    # missing-type-args (ANN002)
    "ANN002",

    # missing-type-kwargs (ANN003)
    "ANN003",

    # missing-type-self (ANN101)
    "ANN101",

    # missing-type-cls (ANN102)
    "ANN102",

    # missing-return-type-undocumented-public-function (ANN201)
    "ANN201",

    # missing-return-type-private-function (ANN202)
    "ANN202",

    # missing-return-type-special-method (ANN204)
    "ANN204",

    # any-type (ANN401)
    "ANN401",

    # unused-function-argument (ARG001)
    "ARG001",

    # unused-method-argument (ARG002)
    "ARG002",

    # blind-except (BLE001)
    "BLE001",

    # undocumented-public-module (D100)
    "D100",

    # undocumented-public-class (D101)
    "D101",

    # undocumented-public-method (D102)
    "D102",

    # undocumented-public-function (D103)
    "D103",

    # undocumented-public-package (D104)
    "D104",

    # undocumented-magic-method (D105)
    "D105",

    # undocumented-public-nested-class (D106)
    "D106",

    # undocumented-public-init (D107)
    "D107",

    # one-blank-line-before-class (D203)
    "D203",

    # blank-line-after-summary (D205)
    "D205",

    # multi-line-summary-first-line (D212)
    "D212",

    # non-imperative-mood (D401)
    "D401",

    # line-too-long (E501)
    "E501",

    # boolean-positional-arg-in-function-definition (FBT001)
    "FBT001",

    # boolean-default-value-in-function-definition (FBT002)
    "FBT002",

    # implicit-namespace-package (INP001)
    "INP001",

    # try-except-in-loop (PERF203)
    "PERF203",

    # too-many-branches (PLR0912)
    "PLR0912",

    # too-many-arguments (PLR0913)
    "PLR0913",

    # too-many-statements (PLR0915)
    "PLR0915",

    # magic-value-comparison (PLR2004)
    "PLR2004",

    # assert (S101)
    "S101",

    # exec-builtin (S102)
    "S102",

    # suspicious-xml-element-tree-usage (S314)
    "S314",

    # start-process-with-a-shell (S605)
    "S605",

    # private-member-access (SLF001)
    "SLF001",

    # raise-vanilla-class (TRY002)
    "TRY002",

    # ends-in-period (D400)
    "D400",

    # ends-in-punctuation (D415)
    "D415",

    # suspicious-non-cryptographic-random-usage (S311)
    "S311",

    # subprocess-without-shell-equals-true (S603)
    "S603",

    # start-process-with-partial-path (S607)
    "S607",

    # suspicious-xmle-tree-usage (S320)
    "S320",

    # suspicious-xml-mini-dom-usage (S318)
    "S318",
    # Commented out code
    "ERA001",
    # No space after block comment
    "E265",
    # single-line-implicit-string-concatenation (ISC001)
    "ISC001"
]
